Added delete.html. Changed views.py, urls.py for TaskTrackerDeleteView (based on View)

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -20,6 +20,9 @@
                         <div class="container">
                             <a href="{% url 'task_track_edit' tracker.pk %}" class="btn btn-outline-success  btn-block">Edit</a>
                         </div>
+                        <div class="container">
+                            <a href="{% url 'task_track_delete' tracker.pk %}" class="btn btn-outline-success  btn-block">Delete</a>
+                        </div>
                     </div>
                 </div>
             </div>
