--- a/source/webapp/templates/TaskTrack.html
+++ b/source/webapp/templates/TaskTrack.html
@@ -2,10 +2,10 @@
 
 {% block title %}{{ tracker.summary }}{% endblock %}
 
-{% comment %}{% block menu %}
-    <li><a href="{% url "article_update" article.pk %}">Edit</a></li>
-    <li><a href="{% url "article_delete" article.pk %}">Delete</a></li>
-{% endblock %}{% endcomment %}
+{% block menu %}
+    <a href="{% url "task_track_edit" tracker.pk %}" class="btn btn-outline-light">Edit</a>
+    <a href="{% url "task_track_delete" tracker.pk %}" class="btn btn-outline-light">Delete</a>
+{% endblock %}
 
 {% block content %}
     <h1 class="mt-2">{{ tracker.summary }}</h1>
