--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block menu %}
     <a href="{% url 'task_track_add' %}" class="btn btn-outline-light">Add entry</a>
+    <a href="{% url 'type_ls' %}" class="btn btn-outline-light">Types list</a>
+    <a href="{% url 'status_ls' %}" class="btn btn-outline-light">Statuses list</a>
 {% endblock %}
 
 {% block content %}
