--- a/source/webapp/templates/types_ls.html
+++ b/source/webapp/templates/types_ls.html
@@ -10,6 +10,7 @@
     {% for type in types %}
         <div class="container">
             <h4>Type: {{ type.type }} </h4>
+            <a href="{% url 'type_edit' type.pk %}" class="btn btn-outline-success">Edit</a>
         </div>
         <hr>
     {% endfor %}
