--- a/source/webapp/templates/types_ls.html
+++ b/source/webapp/templates/types_ls.html
@@ -11,6 +11,7 @@
         <div class="container">
             <h4>Type: {{ type.type }} </h4>
             <a href="{% url 'type_edit' type.pk %}" class="btn btn-outline-success">Edit</a>
+            <a href="{% url 'type_delete' type.pk %}" class="btn btn-outline-success">Delete</a>
         </div>
         <hr>
     {% endfor %}
